security/model-armor/terraform/gen/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: model-armor-tutorial-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
      
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        mode: Terminate
        options:
          networking.gke.io/cert-manager-certs: akamalov-manual
      
  addresses:
  - type: NamedAddress
    value: model-armor-tutorial-gateway
